<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="50sp" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="130dip"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:layout_marginTop="100dip"
        android:text="@string/signup_btn" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="130dip"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:layout_marginTop="30dip"
        android:text="@string/login_btn" />

</LinearLayout>