<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:layout_marginBottom="20dip"
	    android:src="@drawable/icon_lock"
	    android:contentDescription="@string/img_desc"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/login_id_edit"
                    android:layout_width="140dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/id_hint"
                    android:lines="1"
                    android:maxLength="10"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/login_pw_edit"
                    android:layout_width="140dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/pw_hint"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/login_btn" />
        </LinearLayout>
        
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="로그인유지" 
            />
    </LinearLayout>

</LinearLayout>